test_regress/t/t_param_sel_range_bad.out
%Warning-SELRANGE: t/t_param_sel_range.v:43:35: Selection index out of range: 7:7 outside 4:0
                                              : ... In instance t.u2
                 r_rst[i] <= r_rst[i-1];   
                                  ^
                   ... Use "/* verilator lint_off SELRANGE */" and lint_on around source to disable this message.
%Error: Exiting due to
